# endcord

./: .pre-commit-config.yaml  .ruff.toml  COMMANDS.md  DEBIAN_REPOSITORY.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  build.py  commands.md  configuration.md  extensions.md  main.py  pyproject.toml  setup-gpg-keys.sh  setup.py  todo.txt
.github/: CONTRIBUTING.md  screenshots.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-release.yml  debian-repo.yml
docs/: commands.md  configuration.md  extensions.md  keybindings.md
endcord/: app.py  arg.py  assist_data.py  auth.py  client_properties.py  clipboard.py  color.py  config.py  debug.py  defaults.py  discord.py  downloader.py  emoji_compat.py  formatter.py  game_detection.py  gateway.py  git.py  keybinding.py  media.py  media_inline.py  message.py  parser.py  peripherals.py  perms.py  pfp.py  pgcurses.py  profile_manager.py  qr_auth.py  qr_display.py  rpc.py  search.py  termcap.py  terminal_utils.py  tui.py  user_frecency_pb2.py  utils.py  voice.py
endcord_cython/: color.pyx  formatter.pyx  media.pyx  tui.pyx
scripts/: sync-upstream.sh
themes/: default.ini  irc.ini  legacy.ini  white.ini
tools/: build_python.sh  ensure_copyright.py  generate_emoji.py  generate_wide_ranges.py  install.sh  user_frecency.proto
