[project]
name = "endcord"
version = "1.1.8"
description = "Feature rich Discord TUI client."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-protos>=0.0.2",
    "emoji>=2.15.0",
    "filetype>=1.2.0",
    "numpy>=2.4.1",
    "orjson>=3.11.5",
    "pexpect>=4.9.0",
    "psutil>=7.2.1; sys_platform != 'linux'",
    "pysocks>=1.7.1",
    "python-socks>=2.8.0",
    "pywin32>=311; sys_platform == 'win32'",
    "pywin32-ctypes>=0.2.3; sys_platform == 'win32'",
    "soundcard>=0.4.5",
    "soundfile>=0.13.1",
    "urllib3>=2.6.3",
    "websocket-client>=1.9.0",
    "windows-curses>=2.4.1; sys_platform == 'win32'",
    "windows-toasts>=1.3.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
qrauth = [
    "cryptography>=41.0.0",
    "segno>=1.6.0",  # Best terminal QR output
    "qrcode>=7.4",   # Fallback
]
full = [
    "cryptography>=41.0.0",
    "segno>=1.6.0",
    "qrcode>=7.4",
    "av>=14.0.0",
    "pillow>=10.0.0",
    "pynacl>=1.5.0",
]

[dependency-groups]
build = [
    "cython>=3.2.4",
    "nuitka>=2.8.9",
    "pyinstaller>=6.17.0",
    "setuptools>=80.9.0",
]
media = [
    "av>=14.0.0",
    "pillow>=10.0.0",
    "pynacl>=1.5.0",
]
qrauth = [
    "cryptography>=41.0.0",
    "segno>=1.6.0",
    "qrcode>=7.4",
]
