[project]
name = "endcord"
version = "1.3.0"
description = "Feature rich Discord TUI client."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-protos>=0.0.2",
    "emoji>=2.15.0",
    "filetype>=1.2.0",
    "numpy>=2.4.2",
    "orjson>=3.11.7",
    "pexpect>=4.9.0",
    "psutil>=7.2.1; sys_platform != 'linux'",
    "pycryptodome>=3.23.0",
    "pynacl>=1.6.2",
    "pysocks>=1.7.1",
    "python-socks>=2.8.0",
    "pywin32>=311; sys_platform == 'win32'",
    "pywin32-ctypes>=0.2.3; sys_platform == 'win32'",
    "qrcode>=8.2",
    "soundcard>=0.4.5",
    "soundfile>=0.13.1",
    "urllib3>=2.6.3",
    "websocket-client>=1.9.0",
    "windows-curses>=2.4.1; sys_platform == 'win32'",
    "windows-toasts>=1.3.1; sys_platform == 'win32'",
]

[dependency-groups]
build = [
    "cython>=3.2.4",
    "nuitka>=4.0",
    "pyinstaller>=6.18.0",
    "setuptools>=82.0.0",
]
media = [
    "av>=16.1.0",
    "pillow>=12.1.1",
    "pynacl>=1.6.2",
]
