[project]
name = "endcord"
version = "1.5.3"
description = "The most feature rich Discord TUI client."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websocket-client>=1.9.0",
    "python-socks>=2.8.2",
    "orjson>=3.11.9",
    "soundcard>=0.4.6",
    "soundfile>=0.14.0",
    "numpy>=2.5.0",
    "pycryptodome>=3.23.0",
    "pywin32>=312; sys_platform == 'win32'",
    "pywin32-ctypes>=0.2.3; sys_platform == 'win32'",
    "windows-curses>=2.4.2; sys_platform == 'win32'",
    "windows-toasts>=1.3.1; sys_platform == 'win32'",
    "certifi>=2026.6.17; sys_platform == 'darwin'",
    "psutil>=7.2.2; sys_platform != 'linux'",
]

[dependency-groups]
build = [
    "cython>=3.2.8",
    "nuitka[onefile]>=4.1.3",
    "pyinstaller>=6.21.0",
    "setuptools>=82.0.0",
]
media = [
    "av>=18.0.0",
    "dave-py>=0.1.2",
    "pillow>=12.3.0",
    "pynacl>=1.6.2",
]

[build]
python_max = "3.14.6"
python_freethreaded = "3.14.6"
python_last_safe = "3.13.15"
curses_tag = "v6_6_20260704"
mini_exclude_deps = ["numpy", "soundfile", "soundcard"]
micro_exclude_deps = ["numpy", "soundfile", "soundcard", "orjson", "pycryptodome"]
medium_deps = ["pillow"]
